Fix overflow, some renaming and use tile in Angular

--- a/packages/documentation/src/stories/home.styles.scss
+++ b/packages/documentation/src/stories/home.styles.scss
@@ -2,6 +2,10 @@
 @use '@swisspost/design-system-styles/core.scss' as post;
 @use '@swisspost/design-system-styles/mixins/utilities';
 
+#storybook-docs{
+  overflow-x:hidden;
+}
+
 .bg-fullwidth {
   position: relative;
 
@@ -28,6 +32,8 @@
 .tile-wrapper {
   display: flex;
   flex-wrap: wrap;
+  padding:0;
+  list-style-type: none;
   justify-content: center;
   gap: post.$size-big;
 
